# bella

./: .gitignore  CHANGELOG  LICENSE  Makefile  README.md  cayley.py  chistyakov.py  farey.py  limits.py  padictest.py  peripherals.py  pyproject.toml  riley.py  setup.py  test.py
bella/: __init__.py  cayley.py  chistyakov.py  farey.py  hvhelp.py  matrix.py  moduli.py  riley.py  slices.py
examples/: README.md  accidental_parabolic.py  animate_limits_as_slices_vary.py  animate_slices.py  apanasov.py  apollonian_gasket.py  atom.py  beads.py  bianchi.py  bugged.py  cannon_thurston.py  cayley_graph_speed.py  connected_component_bound.py  cusp_groups.py  dunfield_tiozzo.csv  dunfield_tiozzo.py  dunfield_tiozzo.sage  elementary.py  elliptic_parabolic_slice.py  farey.py  fig8lattice.py  generate_zoo.sh  geometrically_infinite.py  grandma.py  guessradial.py  indras_necklace.py  interesting_file.py  isometric_circles.py  jorgensen_marden.py  lackenby_purcell.py  limits.py  maskit.py  maskit_limits.py  maskit_slice.py  modular_group.py  padic.py  padictest.py  parabolic_slice_hidef.py  parabolic_slice_pleating_rays.py  parabolic_slices.py  (+13 more)
examples.old/: animate_limits_as_slices_vary.py  profileslice.py  test.py
tests/: rileywords.py  test_cayley.py  test_farey.py  test_matrix.py  test_riley.py
