[project]
name = "bella"
version = "0.1.0"
authors = [{name="Alex Elzenaar",email="aelz176@aucklanduni.ac.nz"}]
description = "A computational package for discrete matrix groups of low rank."
readme = "README.md"
dependencies = [
    "holoviews",
    "bokeh",
    "pandas",
    "panel",
    "pyadic",
    "mpmath"
]
[project.urls]
"Homepage" = "https://github.com/aelzenaar/bella"
